added js functionality

--- a/ToDoApp/index.html
+++ b/ToDoApp/index.html
@@ -13,10 +13,12 @@
             <h2>To-Do List</h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add items">
-                <button>Add</button>
+                <button onclick="addTask()">Add</button>
             </div>
+            <ul id="listContainer">
+            </ul>
         </div>
     </div>
-    
+   <script src="script.js"></script> 
 </body>
 </html>
